--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -69,8 +69,8 @@ body
 #middleToolbar
 {
     display: flex;
-    align-items: flex-start;
     flex-direction: row;
+    justify-content: space-between;
 
     gap: 10px;
     font-size: 0.9em;
@@ -78,8 +78,10 @@ body
     box-shadow: 3px 3px #292929;
     margin-top: 10px;
     padding: 10px;
-    width: 100%;
+    width: auto;
     bottom: 5px;
+
+    font-family: "JetBrains Mono", monospace;
 }
 #itemGrid
 {
@@ -87,7 +89,8 @@ body
     grid-gap: 15px;
     max-width: 900px;
     width: 100%;
-    margin: 0 auto;
+
+    font-family: "JetBrains Mono", monospace;
 }
 .item-card
 {
@@ -96,7 +99,11 @@ body
     box-shadow: 2px 2px 5px #888;
     font-size: 16px;
 
+    width: auto;
+
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    word-break: break-word;
+    word-break: keep-all;
+    white-space: nowrap;
 }
