--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,6 @@
         <p class="subtitle">prowizoryczny sklep wszelakich artykułów</p>
     </div>
 </div>
-
 <div id="middleToolbar">
     <div id="formLeft">
         <form id="itemForm">
@@ -23,7 +22,6 @@
             <button type="button" id="cancelEditButton" class="button" style="display: none;">Anuluj edycję</button>
         </form>
     </div>
-
     <div id="formRight">
         <form id="filterForm">
             Sortuj:
@@ -36,12 +34,9 @@
         </form>
     </div>
 </div>
-
 <div id="middle">
-    <div id="itemGrid" style="display:grid; grid-template-columns: repeat(3,1fr);">
-    </div>
+    <div id="itemGrid"></div>
 </div>
-
 <script src="/script.js"></script>
 </body>
 </html>
