Add image support

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
             <label><input type="text" name="name" class="inputTextField" placeholder="Nazwa przedmiotu" required /></label>
             <label><input type="number" name="price" class="inputTextField" placeholder="Cena" required /></label>
             <button type="submit" id="submitButton" class="button">Dodaj przedmiot</button>
+            <input type="file" id="imageInput" class="button" accept="image/*"/>
             <button type="button" id="cancelEditButton" class="button" style="display: none;">Anuluj edycję</button>
         </form>
     </div>
